[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/menu_header_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/main_menu/main_menu.gd" type="Script" id=3]

[node name="MainMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 200 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 293.0
margin_bottom = 206.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 279.0
margin_bottom = 192.0
custom_constants/separation = 8
alignment = 1

[node name="Label2" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 271.0
text = "MAIN MENU"

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 271.0
margin_bottom = 48.0
text = "NEW GAME"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 271.0
margin_bottom = 82.0
text = "RETURN"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 90.0
margin_right = 271.0
margin_bottom = 116.0
text = "RESTART"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 124.0
margin_right = 271.0
margin_bottom = 150.0
text = "ABOUT"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 158.0
margin_right = 271.0
margin_bottom = 184.0
text = "EXIT"

[connection signal="visibility_changed" from="." to="." method="_on_MainMenu_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
